[package]
name = "nataliedotexe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
color-eyre = "0.6.2"
region = "3.0.0"
widestring = "1.0.2"

[dependencies.windows]
version = "0.44.0"
features = [
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Memory",
  "Win32_Foundation", 
  "Win32_Security", 
  "Win32_UI_WindowsAndMessaging", 
  "Win32_System_Threading"
  ]
