[package]
name = "natalib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ctor = "0.1.26"
u16cstr = "0.4.0"

[dependencies.windows]
version = "0.44.0"
features = [
  "Win32_UI_WindowsAndMessaging", 
  "Win32_Foundation"
]
